@@ -126,3 +126,67 @@ password
 digest
 resource
 auth
+
+# In the `http://jabber.org/protocol/pubsub' namespace
+affiliation
+affiliations
+configure
+create
+item
+items
+options
+publish
+pubsub
+required
+retract
+subscribe
+subscribe-options
+subscription
+subscriptions
+unsubscribe
+
+# In the `http://jabber.org/protocol/pubsub#errors' namespace
+closed-node
+configuration-required
+invalid-jid
+invalid-options
+invalid-payload
+invalid-subid
+item-forbidden
+item-required
+jid-required
+max-nodes-exceeded
+nodeid-required
+not-in-roster-group
+not-subscribed
+payload-too-big
+payload-required
+pending-subscription
+presence-subscription-required
+subid-required
+unsupported
+unsupported-access-model
+
+# In the `http://jabber.org/protocol/pubsub#event' namespace
+collection
+configuration
+delete
+event
+item
+items
+node
+node
+purge
+retract
+subscription
+
+# In the `http://jabber.org/protocol/pubsub#owner' namespace
+affiliation
+affiliations
+configure
+default
+delete
+pubsub
+purge
+subscription
+subscriptions
