@@ -18,6 +18,9 @@
 
 	* testsuite/test.sh: Fixed portability issues with sed(1) and head(1).
 
+	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in:
+	Added pubsub-related namespaces, element names and attribute names.
+
 2006-10-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* priv/lib/Makefile.am: Copies of stringprep_drv.so,
